--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -479,10 +479,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7043 entries, 0 to 7042\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   customerID        7043 non-null   object \n",
+      " 1   tenure            7043 non-null   int64  \n",
+      " 2   Contract          7043 non-null   object \n",
+      " 3   PaperlessBilling  7043 non-null   object \n",
+      " 4   PaymentMethod     7043 non-null   object \n",
+      " 5   MonthlyCharges    7043 non-null   float64\n",
+      " 6   TotalCharges      7032 non-null   float64\n",
+      " 7   Churn             7043 non-null   object \n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 440.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mostrar estrutura do DataFrame\n",
+    "df_contracts.info()"
+   ]
   }
  ],
  "metadata": {
