chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -508,6 +508,13 @@
     "# Mostrar estrutura do DataFrame\n",
     "df_contracts.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Após a transformação da coluna TotalCharges do DataFrame Contracts, a coluna passou a ter 11 valores ausentes (missing values')"
+   ]
   }
  ],
  "metadata": {
