chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Criar DataFrames com base nos Datasets"
+    "## Criar DataFrames com base nos Datasets\n"
    ]
   },
   {
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trasformação de Dados"
+    "# Trasformação de Dados\n"
    ]
   },
   {
@@ -474,7 +474,8 @@
    "outputs": [],
    "source": [
     "# Transformar coluna TotalCharges de String para Float - Abordagem 2 com to_numeric com coerce\n",
-    "df_contracts['TotalCharges'] = pd.to_numeric(df_contracts['TotalCharges'], errors='coerce')"
+    "df_contracts['TotalCharges'] = pd.to_numeric(\n",
+    "    df_contracts['TotalCharges'], errors='coerce')"
    ]
   },
   {
@@ -513,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Após a transformação da coluna TotalCharges do DataFrame Contracts, a coluna passou a ter 11 valores ausentes (missing values')"
+    "### Após a transformação da coluna TotalCharges do DataFrame Contracts, a coluna passou a ter 11 valores ausentes (missing values')\n"
    ]
   },
   {
@@ -702,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unificar DataFrames de Customers, Services e Contracts"
+    "## Unificar DataFrames de Customers, Services e Contracts\n"
    ]
   },
   {
@@ -815,7 +816,7 @@
    ],
    "source": [
     "# mostrar estrutura\n",
-    "df_temp.info()\n"
+    "df_temp.info()"
    ]
   },
   {
@@ -1035,6 +1036,62 @@
    ],
    "source": [
     "df_churn_temp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unificar os 3 dataFrames ao mesmo tempo, com colunas de nomes diferentes\n",
+    "df_churn = df_customers.merge(\n",
+    "    df_services, on=['IDCliente']).merge(df_contracts, left_on=['IDCliente'], right_on=['customerID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7043 entries, 0 to 7042\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   IDCliente         7043 non-null   object \n",
+      " 1   Genero            7043 non-null   object \n",
+      " 2   Mais65anos        7043 non-null   int64  \n",
+      " 3   TemParceiro       7043 non-null   object \n",
+      " 4   TemDependentes    7043 non-null   object \n",
+      " 5   PhoneService      7043 non-null   object \n",
+      " 6   MultipleLines     7043 non-null   object \n",
+      " 7   InternetService   7043 non-null   object \n",
+      " 8   OnlineSecurity    7043 non-null   object \n",
+      " 9   OnlineBackup      7043 non-null   object \n",
+      " 10  DeviceProtection  7043 non-null   object \n",
+      " 11  TechSupport       7043 non-null   object \n",
+      " 12  StreamingTV       7043 non-null   object \n",
+      " 13  StreamingMovies   7043 non-null   object \n",
+      " 14  customerID        7043 non-null   object \n",
+      " 15  tenure            7043 non-null   int64  \n",
+      " 16  Contract          7043 non-null   object \n",
+      " 17  PaperlessBilling  7043 non-null   object \n",
+      " 18  PaymentMethod     7043 non-null   object \n",
+      " 19  MonthlyCharges    7043 non-null   float64\n",
+      " 20  TotalCharges      7043 non-null   object \n",
+      " 21  Churn             7043 non-null   object \n",
+      "dtypes: float64(1), int64(2), object(19)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_churn.info()"
    ]
   }
  ],
