chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -4999,6 +4999,67 @@
     "# Preencher valores padrão conforme a coluna\n",
     "df_churn.fillna(value={'TotalCharges': media_totalCharges, 'Genero': 'Não Declarado'})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise Univariada   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A faixa etária do cliente tem uma forte associação com o Churn\n",
+    "- Um cliente com menos de 6 meses de contrato é mais propenso ao Churn\n",
+    "- Cliente com contrato mensal é mais propenso ao Churn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Churn\n",
+       "No     5174\n",
+       "Yes    1869\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contar clientes usando a variável Churn como referência\n",
+    "df_churn.Churn.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Como identificar valores possíveis (únicos) numa variável do DataFrame\n",
+    "df_churn.Churn.unique()"
+   ]
   }
  ],
  "metadata": {
