chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5060,6 +5060,15 @@
     "# Como identificar valores possíveis (únicos) numa variável do DataFrame\n",
     "df_churn.Churn.unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Como é a distribuição de Clientes (percentualmente falando) que abandonaram ou continua, ativos"
+   ]
   }
  ],
  "metadata": {
