chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5152,6 +5152,27 @@
     "\n",
     "ax.bar_label(ax.containers[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Month-to-month', 'One year', 'Two year'], dtype=object)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Quais são os tipos de contrato\n",
+    "df_churn.Contract.unique()"
+   ]
   }
  ],
  "metadata": {
