chore: Update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5309,6 +5309,88 @@
     "# Histograma do Monthly Charges\n",
     "df_churn.MonthlyCharges.plot.hist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(32.37114865824223)"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Medidas de Posição - Média de Tempo de Contrato\n",
+    "df_churn.tenure.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(29.0)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Medidas de Posição - Mediana Tempo de Contrato\n",
+    "df_churn.tenure.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "Name: tenure, dtype: int64"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Medidas de Posição - Moda Tempo de Contrato\n",
+    "df_churn.tenure.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.55948102309446\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Medidas de Dispersão - Desvio de Padrão Tempo de Contrato\n",
+    "print(df_churn.tenure.std())"
+   ]
   }
  ],
  "metadata": {
