chore: Refactor EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5391,6 +5391,24 @@
     "# Medidas de Dispersão - Desvio de Padrão Tempo de Contrato\n",
     "print(df_churn.tenure.std())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75.86842617906674\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Medidas de Dispersão - Coeficiente de Variação\n",
+    "print(df_churn.tenure.std() / df_churn.tenure.mean() * 100)"
+   ]
   }
  ],
  "metadata": {
