chore: Refactor EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "4  9237-HQITU  Female              0      No         No"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "4           No               No          No          No              No  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "4           Electronic check           70.70       151.65   Yes  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "[7043 rows x 5 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "4               No          No          No              No  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
        "np.int64(11)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
        "[11 rows x 21 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2181,7 @@
        "[7043 rows x 20 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2567,7 @@
        "[7043 rows x 20 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2579,7 +2579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2965,7 +2965,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3363,7 @@
        "[7032 rows x 21 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3375,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3761,7 +3761,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3780,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4166,7 +4166,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4178,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4564,7 +4564,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4576,7 +4576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4585,7 +4585,7 @@
        "np.float64(2283.3004408418656)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4605,7 +4605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4991,7 +4991,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5019,7 +5019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -5031,7 +5031,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5043,7 +5043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5052,7 +5052,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5064,7 +5064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -5076,7 +5076,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5089,7 +5089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5098,7 +5098,7 @@
        "[Text(0, 0, '5174'), Text(0, 0, '1869')]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5122,7 +5122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -5131,7 +5131,7 @@
        "[Text(0, 0, '0.73463'), Text(0, 0, '0.26537')]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5155,7 +5155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5164,7 +5164,7 @@
        "array(['Month-to-month', 'One year', 'Two year'], dtype=object)"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5176,7 +5176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -5185,7 +5185,7 @@
        "[Text(0, 0, '3875'), Text(0, 0, '1695'), Text(0, 0, '1473')]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5209,7 +5209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5218,7 +5218,7 @@
        "[Text(0, 0, '0.550192'), Text(0, 0, '0.240664'), Text(0, 0, '0.209144')]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5242,7 +5242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -5251,7 +5251,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5281,7 +5281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5290,7 +5290,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5312,7 +5312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5321,7 +5321,7 @@
        "np.float64(32.37114865824223)"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5333,7 +5333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -5342,7 +5342,7 @@
        "np.float64(29.0)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5354,7 +5354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -5364,7 +5364,7 @@
        "Name: tenure, dtype: int64"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5376,7 +5376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -5394,7 +5394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -5409,6 +5409,76 @@
     "# Medidas de Dispersão - Coeficiente de Variação\n",
     "print(df_churn.tenure.std() / df_churn.tenure.mean() * 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "613"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Quantos clientes possuem 1 mês de contrato - Filtro\n",
+    "len(df_churn[(df_churn.tenure == 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.7"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Quanto os clientes de 1 mês de contrato representam em % do total\n",
+    "round(len(df_churn[(df_churn.tenure == 1)]) / len(df_churn) * 100, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1470"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Quantos clientes possuem entre 1 e 6 meses de contrato\n",
+    "len(df_churn[(df_churn.tenure >= 1) & (df_churn.tenure <= 6)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
