chore: Refactor EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5475,10 +5475,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tenure\n",
+       "1     613\n",
+       "72    362\n",
+       "2     238\n",
+       "3     200\n",
+       "4     176\n",
+       "     ... \n",
+       "28     57\n",
+       "39     56\n",
+       "44     51\n",
+       "36     50\n",
+       "0      11\n",
+       "Name: tenure, Length: 73, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apresentar a quantidade de cliente por tempo de contrato - Agrupamento com sumarização\n",
+    "df_churn.groupby('tenure')['tenure'].count().sort_values(ascending=False)"
+   ]
   }
  ],
  "metadata": {
