--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -5536,6 +5536,184 @@
     "# Apresentar a quantidade de cliente por tempo de contrato - Agrupamento com sumarização em um Plot\n",
     "df_churn.groupby('tenure')['tenure'].count().sort_values().plot.barh(figsize=(20,20))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise Bivariada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Contract</th>\n",
+       "      <th>Month-to-month</th>\n",
+       "      <th>One year</th>\n",
+       "      <th>Two year</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Churn</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>No</th>\n",
+       "      <td>2220</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>1647</td>\n",
+       "      <td>5174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>1655</td>\n",
+       "      <td>166</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>3875</td>\n",
+       "      <td>1473</td>\n",
+       "      <td>1695</td>\n",
+       "      <td>7043</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Contract  Month-to-month  One year  Two year  Total\n",
+       "Churn                                              \n",
+       "No                  2220      1307      1647   5174\n",
+       "Yes                 1655       166        48   1869\n",
+       "Total               3875      1473      1695   7043"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hipótese: Clientes com Contrato do Tipo Mensal são mais propensos ao Churn  - Quantidade\n",
+    "# Construir Tabela de Contingência entre Tipo de Contrato e Churn\n",
+    "pd.crosstab(df_churn.Churn, df_churn.Contract, margins=True, margins_name='Total')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Contract</th>\n",
+       "      <th>Month-to-month</th>\n",
+       "      <th>One year</th>\n",
+       "      <th>Two year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Churn</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>No</th>\n",
+       "      <td>0.429068</td>\n",
+       "      <td>0.252609</td>\n",
+       "      <td>0.318322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.885500</td>\n",
+       "      <td>0.088818</td>\n",
+       "      <td>0.025682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>0.550192</td>\n",
+       "      <td>0.209144</td>\n",
+       "      <td>0.240664</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Contract  Month-to-month  One year  Two year\n",
+       "Churn                                       \n",
+       "No              0.429068  0.252609  0.318322\n",
+       "Yes             0.885500  0.088818  0.025682\n",
+       "Total           0.550192  0.209144  0.240664"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hipótese: Clientes com Contrato do Tipo Mensal são mais propensos ao Churn  - Proporção\n",
+    "# Construir Tabela de Contingência entre Tipo de Contrato e Churn\n",
+    "pd.crosstab(df_churn.Churn, df_churn.Contract, normalize='index', margins=True, margins_name='Total')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Considerando o público total, os clientes de contrato mensal representam 55%. Porém, se considerarmos apenas os clientes que abandonaram o contrato, 88% tinham contrato mensal.\n",
+    "Desta forma, podemos afirmar que há uma correlação entre o tipo de contrato e o abandono."
+   ]
   }
  ],
  "metadata": {
