Refactor and update EDA code for churn dataset

--- a/eda-churn.ipynb
+++ b/eda-churn.ipynb
@@ -6176,6 +6176,14 @@
     "# Apresentar Plot Scatter entre Tenure e TotalCharges\n",
     "df_churn.plot.scatter(x='tenure', y='TotalCharges')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Desafio 1: Validar a primeira hipótese de que a faixa etária do cliente tem uma forte associação com o Churn.\n",
+    "- Desafio 2: Validar com Teste de hipótese se Contrato Mensal está mais propenso ao Churn."
+   ]
   }
  ],
  "metadata": {
